# Adaptive-IPI

./: .gitignore  IEEE_Conference_Template (1).md  README.md  pilot_pipeline_colab.ipynb  pilot_pipeline_colab_v2.ipynb  pyproject.toml  requirements.txt  requirements_frozen.txt  run_mac_full.sh  run_mac_pilot.sh
configs/: adaptive.yaml  data.yaml  distillation.yaml  e2e_data.yaml  e2e_student.yaml  e2e_teacher.yaml  evaluation.yaml  mac_data.yaml  mac_data_seed43.yaml  mac_data_seed44.yaml  mac_data_seed45.yaml  mac_student.yaml  mac_teacher.yaml  student.yaml  teacher.yaml
demo/: Dockerfile  README.md  docker-compose.yml
docs/: dataset_construction.md  pipeline_overview.md
paper_assets/: TABLES_AND_METRICS.md  ablation_study_report.md  five_seed_reproducibility.md  paper_draft_handover.md  post_experiment_report.md
reports/: 20_raw_samples.json  cpu_smoke_test.md  dataset_integrity_report.json  email_dataset_report.txt  email_filter_inspection.txt  end_to_end_smoke_test.md  final_dataset_audit.md  gpu_readiness.md  huggingface_dataset_report.md  kd_dry_run.json  teacher_dry_run.json  teacher_dry_run.jsonl
scripts/: analyze_distributions.py  analyze_exp1.py  compute_stats.py  debug_nan.py  download_enron.py  fix_nans.py  generate_handcrafted_benign.py  recover_annotations.py  run_all_ablations.sh  run_confidence_analysis.py  run_cpu_smoke_test.py  run_dataset_integrity.py  run_e2e_integration_test.py  run_embedding_analysis.py  run_enron_ablation_eval.py  run_enron_ablation_prep.py  run_exp1_curriculum_sweep.py  run_exp4_temperature_scaling.py  run_kd_dry_run.py  (+15 more)
(+123 files in other folders)
