[project]
name = "adaptive-ipi"
version = "0.1.0"
description = "Adaptive Teacher-Guided Hard-Negative Curriculum for Lightweight Indirect Prompt Injection Detection"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
